dig / microsite -- made section height equal to the visible content area again, absolute positioned the next button again, added some formatting to galleries section, fixed gallery 300x250 ad problem

--- a/docroot/sites/usanetwork/themes/aurora_usa/usanetwork_microsite_themes/dig/css/ms_style.css
+++ b/docroot/sites/usanetwork/themes/aurora_usa/usanetwork_microsite_themes/dig/css/ms_style.css
@@ -276,7 +276,7 @@ you can use the generic selector below, but it's slower:
 
 #microsite {
   width: 100%;
-  height: calc(100% - 65px);
+  height: calc(100% - 65px); /* 65px is height of bottom nav */
   overflow: hidden;
   position: absolute;
   top: 0;
@@ -370,10 +370,13 @@ you can use the generic selector below, but it's slower:
   font-size: 2em;
   margin: 30px 0 10px;
 }
+/* position the next button at the absolute bottom of the content area */
 #microsite section .microsite-section-container div.scroll {
-  position: relative;
+  position: absolute;
+  bottom: 35px;
+  left: 100%;
+  margin: 0 0 0 calc(-50% + 2em);
   width: 4em;
-  margin: 0 auto 45px;
   cursor: pointer;
   padding: 0;
 }
@@ -434,6 +437,10 @@ you can use the generic selector below, but it's slower:
   min-height: 90px;
   margin: 0 auto;
   padding-top: 0;
+}
+/* add some padding to prevent the next button from sitting on top of content */
+#microsite .ad-leaderboard + div {
+  padding-bottom: 95px;
 }
 #microsite .ad300x250,
 #microsite .right-pane .ad300x250 {
@@ -604,9 +611,6 @@ you can use the generic selector below, but it's slower:
 #microsite .carousel .item-list {
   height: 188px;
   overflow: hidden;
-}
-#microsite .carousel li {
-  margin-right: 5px;
 }
 #microsite .carousel li {
   padding: 0;
@@ -1105,7 +1109,7 @@ body.page-node-microsite #block-usanetwork-blocks-usa-tv-show-menu {
 }
 #microsite #galleries-content .full-pane {
   width: 100%;
-  margin: 40px 0 0;
+  margin: 40px auto 0;
   padding: 0;
   max-width: 1120px;
 }
@@ -1115,9 +1119,6 @@ body.page-node-microsite #block-usanetwork-blocks-usa-tv-show-menu {
   clear: both;
 }
 #microsite #galleries-content .microsite-gallery-meta {
-  position: absolute;
-  bottom: 100%;
-  max-height: 70px;
   width: 100%;
 }
 #microsite #galleries-content .left-pane {
@@ -1130,7 +1131,6 @@ body.page-node-microsite #block-usanetwork-blocks-usa-tv-show-menu {
   line-height: 1.1em;
   margin: 0 0 0.2em;
   overflow: hidden;
-  white-space: nowrap;
   width: calc(100% - 216px);
 }
 #microsite #gigya-share {
